--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,57 @@
+* {
+  font-family: 'Open Sans';
+  margin: 0;
+}
+
+html {
+  min-height: 100%;
+}
+
+h1 {
+  display: inline-block;
+}
+
+main {
+  display: flex;
+}
 .logo {
   width: 19%;
-  height: 31%;
-  padding-right: 3%;
-  padding-left: 3%;
+  height: 7%;
+  padding-right: 1%;
+  padding-left: 1%;
 }
 
 .title {
-  font-size: 90px;
+  font-size: 70px;
 }
 
 .app-title {
-  display: flex;
   height: 100vh;
   width: 50%;
   padding-top: 13%;
   background-color: #455A64;
   color: white;
-  justify-content: center;
-  order: 1;
+}
+
+.card-display {
+  width: 50%;
+  height: 100vh;
+  flex-direction: column;
+  order: 2;
+  align-content: flex-end;
+  background-color: #CFD8DC;
 }
 
 .website-title {
 
-  margin-left: auto;
+  margin-left: 6%;
   margin-right: auto;
-  height: 5%;
+  height: 40px;
   width: 85%;
   order: 2;
+  margin-bottom: 30px;
+  margin-top: 60px;
+  text-align: center;
 
 }
 
@@ -38,15 +63,87 @@
 .enter-button {
   flex-direction: row;
   order: 4;
+  margin-left: 6%;
+  margin-right: auto;
+  height: 6%;
+  width: 86%;
+  background-color: #FFC107;
+  font-size: 1.2em;
+  color: white;
 
 }
 
 .website-URL {
 
-  margin-left: auto;
+  margin-left: 6%;
   margin-right: auto;
-  height: 5%;
+  height: 40px;
   width: 85%;
   order: 3;
+  margin-bottom: 40px;
+  text-align: center;
 
 }
+
+.card-div {
+  background-color: #FFFFFF;
+  border: 2.5px solid #C7D3D8;
+  box-sizing: border-box;
+  display: inline-block;
+  margin-top: 15px;
+  width: 90%;
+  height: 20%;
+  margin-left: 30px;
+}
+
+.read-card {
+  position: relative;
+  bottom: 20px;
+  left: 1%;;
+}
+
+.delete-card {
+  position: relative;
+  bottom: 20px;
+  left: 84%;
+}
+
+.title-div {
+  display: inline;
+  margin-bottom: 40px;
+  margin-left: 11%;
+}
+
+input::placeholder {
+  font-size: 2.0em;
+}
+
+.web-card-title {
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.web-card-url {
+  text-align: center;
+  margin-bottom: 30px;
+
+}
+
+hr {
+  margin-bottom: 25px;
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.read {
+  background-color: magenta;
+}
+
+.error-message {
+  position: relative; bottom: 15px; left: 245px;
+
+}
+
+@media (min-width:400px)
